test/types/sync/ferguson/sync-owned-nonnil.good
sync-owned-nonnil.chpl:3: error: sync/single types cannot contain type 'owned C'
